dirty fix for rules wrapping

--- a/src/static/static/dangeru.css
+++ b/src/static/static/dangeru.css
@@ -185,3 +185,11 @@ input, textarea {
   background-color: black;
   font-family: 'CyberpunkWaifus';
 }
+/* pre tag for rules */
+pre {
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+}
